# wbb-bracket-matrix

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
config/: settings.json  sources.json
data/: aliases.csv  team_conferences.csv
data/latest/: analytics_auto_bids_latest.csv  analytics_bart_power_latest.csv  analytics_merged_latest.csv  matrix_latest.csv  resolved_rows_latest.csv  source_rows_latest.csv  source_status_latest.csv  suggested_aliases_review.csv  team_assignment_by_source.csv  team_matching_audit.md  the_athletic_last_seen_url.txt
data/manual/: the_athletic_latest.html  the_athletic_latest_url.txt
data/snapshots/: analytics_auto_bids_20260313T021535Z.csv  analytics_auto_bids_20260314T085312Z.csv  analytics_auto_bids_20260314T204726Z.csv  analytics_auto_bids_20260315T033349Z.csv  analytics_auto_bids_20260315T054800Z.csv  analytics_auto_bids_20260315T204803Z.csv  analytics_bart_power_20260312T205741Z.csv  analytics_bart_power_20260313T031018Z.csv  analytics_bart_power_20260313T090121Z.csv  analytics_bart_power_20260313T170406Z.csv  analytics_bart_power_20260313T205430Z.csv  analytics_bart_power_20260314T005902Z.csv  (+389 more)
tests/: test_analytics.py  test_athletic_updates.py  test_cli.py  test_conferences.py  test_fuzzy.py  test_integration_run_all.py  test_merge.py  test_normalize.py  test_parsers.py  test_pipeline_refresh_conferences.py  test_pipeline_run_all_athletic_update.py  test_pipeline_scrape_manual_html.py  test_pipeline_scrape_source_freshness.py  test_render.py
(+39 files in other folders)
