[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wbb-bracket-matrix"
version = "0.1.0"
description = "Women's college basketball bracketology matrix aggregator."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
